more attempts at fixing header alignment

--- a/style.css
+++ b/style.css
@@ -1,34 +1,46 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 .container{
     /* alignment stuff */
     margin: 5% 10% 0px;
 }
 .headerContainer{
     display: flex;
-    flex-direction: row;
-    justify-content: end;
-    margin-bottom: 5rem;
+    height: 6vh;
+    background-color: antiquewhite;
 }
 
-.header a{
+.headerh1{
+    font-size: 2rem;
+}
 
+a {
+    color: white;
+}
+
+.headernavbar nav{
     /* text stuff */
     background-color: black;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    /* width: 10vw; */
     height: 5vh;
-    padding: 10px;
-    margin: 10px;
-    border: 10px;
-    
     color: white;
-    text-decoration: dashed;
-    text-transform: uppercase;
-    position: relative;
+    text-decoration: dashed; 
 }
 
-.header a:hover{
+.headernavbar a:hover{
     color: rgb(248, 248, 76);
+}
+
+.headernavbar ul {
+    list-style-type: none;
+    justify-content: right;
+}
+
+li {
+    float: left;
+    
 }
 
 
